--- a/htmlgeneratorcomplex/index.html
+++ b/htmlgeneratorcomplex/index.html
@@ -84,7 +84,7 @@
         <label for="modifica"><b>Titolo:</b></label>
         <input type="text" name="modifica" id="modifica">
         <label for="modifica_descr"><b>Descrizione:</b></label>
-        <input type="text" name="modifica_descr" id="modifica_descr" placeholder="document.works.data[i].description">
+        <input type="text" name="modifica_descr" id="modifica_descr">
       </div>
     </form>
   </div>
