--- a/statistiche/indexsep.html
+++ b/statistiche/indexsep.html
@@ -1,17 +1,41 @@
 <!DOCTYPE html>
-	<html>
-	<head>
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<meta charset="utf-8">
-		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        
-        <title>Javascript Test</title>
-        
-		<script>
-            // In page script
-        </script>
-        <script src="data.js"></script>
-        <script src="testsep.js"></script>
 
-	</body>
+<head>
+    <meta charset="utf-8">
+
+    <title>About me</title>
+
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css" rel="stylesheet" type="text/css">
+    <link href="style.css" rel="stylesheet" type="text/css">
+
+	<script src="data.js"></script>
+	<script src="testsep.js"></script>
+
+    <meta name="viewport" content="width=device-width">
+</head>
+
+<body>
+    <header class="Header">
+        <div class="Header-container">
+            <div class="Header-nav">
+                <nav>
+                    <ul id="menuEL"></ul>
+                </nav>
+            </div>
+        </div>
+    </header>
+
+    <div class="l-page">
+        <div class="l-page-container">
+            <div class="l-page-block">
+                <div class="PersonalInfos" id="personalEl"></div>
+            </div>
+
+            <div class="l-page-block">
+                <div class="WorkExperience" id="workEl"></div>
+            </div>
+        </div>
+    </div>
+</body>
+
 </html>
