--- a/videoplayer/index.html
+++ b/videoplayer/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
 
     <title>Video</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
     <link href="style.css" rel="stylesheet" type="text/css">
     
@@ -24,19 +25,25 @@
             </div>
 
         <div class="l-page-block">
-            <video id="video">
-                <source id="source" src="http://192.168.20.173:8080/5aa16f85d53944009f402291.mp4" type="video/mp4">
+            <video id="video" autoplay="true" preload="auto" width="100%">
+                <source id="source" src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" type="video/mp4">
                         Your browser does not support the <code>video</code> element.
                  </video>
             </div>
                 <div id="button_div" class="button_div">
-                <button id="play" class="play">Play</button>
-                <button id="stop" class="stop">Stop</button><br>
-                <button id="up" class="up">+</button><br>
-                <button id="down" class="down">-</button>
+                <button id="shuffle" class="shuffle">Shuffle Play</button>
+                <button id="previous" class="previous">Previous</button>
+                <button id="play" class="play"><i class="fa fa-play"></i></button>
+                <button id="next" class="next">Next</button>
+                <button id="pause" class="pause"><i class="fa fa-pause"></i></button>
+                <button id="barenable" class="barenable">Control Disable</button>
+                <button id="download" class="download"><i class="fa fa-download"></i></button><br>
+                <button id="up" class="up"><i class="fa fa-volume-up"></i></button><br>
+                <button id="down" class="down"><i class="fa fa-volume-down"></i></button><br>
                 <form id="playerurl">
-                <input id="url" type="text" name="text" placeholder="schiaffa dentro il tuo url">
-                <input type="button" id="ok" class="ok">OK</input>
+                <input id="url" type="text" name="text" placeholder="Put in your url">
+                <button type="button" id="apri" class="apri">Apri url</button>
+                <button type="button" id="coda" class="coda">Metti in coda</button>
                 </form>
             </div>
         </div>
