--- a/videoplayer/index.html
+++ b/videoplayer/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <title>Video Player</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.7/css/all.css">
     <link href="style.css" rel="stylesheet" type="text/css">
      <meta name="viewport" content="width=device-width">
 </head>
@@ -13,28 +13,31 @@
     </header>
 
     <div class="index">
+        <div class="filelist" id="filelist" style="display: none;">text content!<span id="close_list" class="close_list">&times;</span></div>
             <div id="video_title"></div>
-            <video id="video" preload="auto" width="100%" controlsList="nodownload">
-                <source id="source" src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" type="video/mp4">
+            <video id="video" preload="auto" width="100%" controlsList="nodownload" onloadstart="this.volume=0.0">
+                <source id="source" href="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" type="video/mp4">
                         Your browser does not support the <code>video</code> element.
                  </video>
                 <div id="button_div" class="button_div">
                 <button id="devbutton" class="devbutton">Dev</button>
-                <button id="shuffle" class="shuffle">Shuffle Play</button>
-                <button id="previous" class="previous">Previous</button>
+                <button id="list" class="list"><i class="fas fa-bars"></i></button>
+                <button id="shuffle" class="shuffle"><i class="fas fa-random"></i></button>
+                <button id="previous" class="previous"><i class="fas fa-fast-backward"></i></button>
                 <button id="play" class="play"><i id="playicon" class="fa fa-play"></i></button>
-                <button id="next" class="next">Next</button>
+                <button id="next" class="next"><i class="fas fa-fast-forward"></i></button>
                 <button id="barenable" class="barenable">Control Disable</button>
                 <button id="download" class="download"><i class="fa fa-download"></i></button>
                 <button id="up" class="up"><i class="fa fa-volume-up"></i></button>
                 <button id="down" class="down"><i class="fa fa-volume-down"></i></button><br>
                 <form id="playerurl">
                 <input id="url" type="text" name="text" placeholder="Put in your url">
-                <button type="button" id="apri" class="apri">Apri url</button>
-                <button type="button" id="coda" class="coda">Metti in coda</button>
+                <button type="button" id="open" class="open">Open url</button>
+                <button type="button" id="queue" class="queue">Add to queue</button>
                 </form>
         </div>
         <div id="video_thumb_div"><img id='video_thumb' src=''></img></div>
+        <div id="video_title2"></div>
         <div id="video_subtitle"></div>
         <div id="video_description"></div>
     <script src="main.js"></script>
