--- a/videoplayer/index.html
+++ b/videoplayer/index.html
@@ -10,7 +10,8 @@
      <meta name="viewport" content="width=device-width">
 </head>
 
-<body onload="Player.getFirstAction()">
+<body onload="">
+        <!-- <body onload="Player.getFirstAction()"> -->
     <header class="Header">
     </header>
 
